--- a/src/main/resources/static/css/agree.css
+++ b/src/main/resources/static/css/agree.css
@@ -23,10 +23,10 @@
   z-index: 1000;
 } */
 /* 약관동의 */
-.form-check1 input {
+.form-check input {
   font-size: 25px;
 }
-.form-check1 {
+.form-check {
   margin-left: 15px;
   margin-top: 21px;
 }
