--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -43,7 +43,7 @@ body {
 }
 
 .board_list {
-  border-bottom: solid 1px lightgray;
-  height: 80px;
+ /*  border-bottom: solid 1px lightgray; */
+  height: 480px;
   width: 80%;
 }
