--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -47,3 +47,23 @@ body {
   height: 480px;
   width: 80%;
 }
+
+#title{
+  display: flex; 
+  /* flex-flow: row wrap; */
+  justify-content: space-between;
+  border-bottom: solid 1px lightgray;
+}
+
+#list a {
+  text-decoration: none;
+  color: black;
+}
+
+tr.colored:hover td{
+
+  background-color:#f3e9e9 !important;
+
+  color:#303f39 !important;
+
+}
