--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -30,16 +30,22 @@
 }
 
 .search {
-    padding: 50px 0 10px 0;
+    padding: 50px 0 60px 0;
     border-bottom: 1px solid #d8d8d8;
-    font-size: 17px;
-    color: rgb(124, 121, 132);
 }
 
-.btn {
-    font-size: 17px;
-    color: rgb(124, 121, 132);
+.search .available {
+    float: left;
+    color: rgba(0,0,0,.65);
+    font-size: 18px;
+}
+
+
+.search .btn {
+    float: right;
     border: 0;
     outline: 0;
     padding: 0;
+    color: rgba(0,0,0,.65);
+    font-size: 18px;
 }
