remove all file

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -88,6 +88,7 @@ tr.colored:hover td{
 .file_list_header{
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .fileItem{
