--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -35,9 +35,9 @@
 .dropdown-content a {
   display: block;
   text-decoration: none;
-  color: rgb(9, 118, 31);
-  font-size: 13.5px;
+  font-size: 14px;
   padding: 10px 15px;
+  color: grey;
 }
 .dropdown-content a:hover {
   background-color: #b3eca282;
