--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -13,3 +13,22 @@ body {
   top: 90px;
   width: 260px;
 }
+
+/* 모달창 */
+.solid {
+	height: 0.1px; 
+	width: 80px; 
+	border: solid lightgray 0.1px; 
+	margin: 20px 12px 0px 12px;
+}
+
+.mission_order{
+	color: gray; 
+	font-size: 14px;
+}
+
+.mission_order:hover{
+	color: black;
+	font-weight: bold;
+	cursor: pointer;
+}
