--- a/src/main/resources/static/css/admin/member.css
+++ b/src/main/resources/static/css/admin/member.css
@@ -41,10 +41,7 @@
 .ant-steps{
     display: flex;
     flex-direction: row;
-}
-.ant-steps-item-container{
-    display: flex;
-    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .ant-steps-small .ant-steps-item-icon {
@@ -60,6 +57,10 @@
 }
 
 .cur-progress{
-    background-color: rgba(47, 135, 20, 0.627);
-    color: white;
+    /* background-color: rgba(47, 135, 20, 0.627);*/
+    color: green; 
+}
+
+.solid{
+    border: 1px solid rgba(0,0,0,.25);
 }
