--- a/src/main/resources/static/css/admin/member.css
+++ b/src/main/resources/static/css/admin/member.css
@@ -34,7 +34,7 @@
 }
 
 .roleHover{
-    color: blue;
+    color: green;
     font-weight: bold;
 }
 
@@ -65,3 +65,6 @@
    color:  rgba(0,0,0,.25);
 }
 
+.bold{
+    font-weight: bold;
+}
