--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -5,38 +5,83 @@
     padding:0;
 }
 .container{
+	border-radius: 20px;
     width: 500px;
-    margin: 0 auto;
-    padding: 25px
+    margin: 40px auto 0px auto;
+    padding: 25px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .container h1{
-    text-align: left;
-    padding: 5px 5px 5px 15px;
-    color: #FFBB00;
-    border-left: 3px solid #FFBB00;
+    text-align: center;
+    padding: 5px 5px 0px 15px;
+    color: #32CD32;
     margin-bottom: 20px;
 }
 .chating{
-    background-color: #000;
-    width: 500px;
-    height: 500px;
+    background-color: transparent;
+    width: 400px;
+    margin: auto;
+    height: 450px;
     overflow: auto;
 }
 .chating .me{
-    color: #F6F6F6;
+    color:black;
     text-align: right;
+    margin-right: 10px;
+    font-size: 25px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 .chating p{
     margin-bottom: 0px;
 }
 .chating .others{
-    color: #FFE400;
+    color: #808080;
     text-align: left;
+    margin-left: 10px;
+    font-size: 20px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 input{
-    width: 330px;
-    height: 25px;
+    width: 250px;
+    height: 28px;
+    padding: 15.5px;
+    margin-left:5px;
+    border: none;
+    outline: none;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 #yourMsg{
     display: none;
+}
+
+.inputTable{
+	margin: auto;
+}
+
+#startBtn{
+	height: 35px;
+	border: none;
+	padding:5px;
+	background-color: #32CD32;
+	color: white;
+	font-weight: bold;
+}
+
+#startBtn:hover {
+	background-color: #78de78;
+}
+
+#sendBtn{
+	height: 35px;
+	border: none;
+	padding:5px;
+	background-color: #32CD32;
+	color: white;
+	font-weight: bold;
+}
+
+#sendBtn:hover {
+	background-color: #78de78;
 }
